deploy/k8s/overlays/staging/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: k-comms
    app.kubernetes.io/component: minio
spec:
  selector:
    app.kubernetes.io/component: minio
  ports:
    - name: api
      port: 9000
      targetPort: api
      protocol: TCP
    - name: console
      port: 9001
      targetPort: console
      protocol: TCP
